--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@mst-mkt/js-config",
   "version": "0.0.0",
   "author": "mst-mkt",
+  "license": "MIT",
   "scripts": {
     "format": "biome check --write ./"
   },
